Fixed button wrappings problem.

--- a/assets/css/revisions-style.css
+++ b/assets/css/revisions-style.css
@@ -5,6 +5,7 @@
 
 :root {
     --disabled-button: #8a9aa4;
+    --disabled-button-border: #798790;
     --disabled-button-shadow: #58666a;
 }
 
@@ -41,10 +42,8 @@ body {
 }
 
 #buttons a {
-    width: 30%;
-    min-width: 300px;
-    height: 75%;
-    min-height: 300px;
+    width: 600px;
+    height: 600px;
 
     margin: 25px;
 
@@ -55,20 +54,28 @@ body {
     font: 2.5em "comfortaa";
     color: white;
     text-shadow: 2px 2px black;
+    text-decoration: none;
     background-color: var(--disabled-button);
 
     border-radius: 20px;
-    box-shadow: 0 10px var(--disabled-button-shadow), 0 15px 15px black;
+    border-bottom: solid 15px var(--disabled-button-shadow);
+
+    transition: 0.2s;
+}
+
+#buttons a i {
+    padding-right: 10px;
+}
+
+#buttons .enabled:hover {
+    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.75);
+    font-size: 3.5em;
+    transform: translateY(-15px);
 }
 
 #buttons .nature {
-    box-shadow: 0 10px var(--disabled-button-shadow), 0 10px 15px black;
-    background: url("../img/nature.jpg") no-repeat center;
-    background-size: cover;
-}
-
-#buttons .work {
-    background: url("../img/work.png") no-repeat center;
+    background-color: #268d26;
+    border-bottom: solid 15px #175417;
 }
 
 #buttons .work::after {
@@ -76,11 +83,7 @@ body {
     margin-left: 15px;
 }
 
-#buttons .technique {
-    background: url("../img/technique.jpg") no-repeat center;
-}
-
 #buttons .technique::after {
      content: '(non publié)';
      margin-left: 15px;
- }
+}
